local-setup/argocd/argocd-conf/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
spec:
  tls:
    - secretName: ingress-tls
  rules:
    - host: kind.neo.nsstc.uah.edu
      http:
        paths:
          - pathType: Prefix
            path: /argocd
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
